more upload error handling and logic

--- a/src/yang_compare/templates/yang_compare/compare.html
+++ b/src/yang_compare/templates/yang_compare/compare.html
@@ -172,6 +172,22 @@ Yang Module Compare
   <pre></pre>
 </div>
 
+<div id="upload-missing-msg" class="ui compact warning upload diff message">
+  <i class="close icon"></i>
+  <div class="header">
+    Please upload your YANG modules.
+  </div>
+  <pre></pre>
+</div>
+
+<div id="upload-module-msg" class="ui compact warning upload diff message">
+  <i class="close icon"></i>
+  <div class="header">
+    Please select a primary module.
+  </div>
+  <pre></pre>
+</div>
+
 <div id="error-msg" class="ui compact negative diff message">
   <i class="close icon"></i>
   <div class="header">
